- Improved *iedit-mode support*:
  - Modified the following key bindings to make they easier to type:
    - ~C-c C-o~ is bound to *iedit-show/hide-occurrence-lines*.
    - ~C-c C-a~ is bound to *iedit-show/hide-context-lines*.
- Improved Janet support: add *pel-janet-activates-minor-modes* user-option which can be
  used to automatically activate minor modes in janet buffer.

** New Features:
- Add explicit support for the *wgrep* external package via the *pel-use-wgrep*
  user-option.  Add a couple of key bindings in the mgrep key map.
  Also add keys to activate wgrep mode in the *rg-mode* and *ag-mode* buffers.
  Describe these in the Grep PDF.
- Added support for Erlang code formatters. The new
  *pel-erlang-code-formatter-command* user-option specifies the Erlang code
  formatter to use.  The Erlang code formatter can be specified by a command
  line format string or by name.  Currently the only Erlang Code formatter
  supported by name is [[https://github.com/WhatsApp/erlfmt#readme][erlfmt]].  Others can be used but the command line must
  be written explicitly.  The ~<f12> R~ key is bound to the
  *pel-erlang-format-code* command that invokes the specified Erlang code formatter.
- The latest version of timelog supports the *timelog-open-file* command.  It
  opens the file identified by the *timeclock-file* user-option.  PEL binds
  this command to ~C-x t l f~ key sequence.
- Add preliminary support for the *go-translate* package when
  *pel-use-go-translate* user option is turned on.  No key binding or
  activation done yet. This is only available for Emacs 27.1 and later.
- New command for C buffers: the *pel-c-comment-dwim* command, bound to the
  standard ~M-;~ key,  extends the standard comment-dwim command: it is able
  to create multi-line C comments using the 1 or 2 stars continuation comment
  style.  The behaviour is selected by the new *pel-c-multiline-comments*
  user-option, which defaults to the standard behaviour and creates one