@@ -3,7 +3,7 @@
 # Copyright (C) 2020, 2021, 2022 by Pierre Rouleau
 
 # Author: Pierre Rouleau <prouleau001@gmail.com>
-# Last Modified Time-stamp: <2022-03-20 12:01:45, updated by Pierre Rouleau>
+# Last Modified Time-stamp: <2022-04-18 22:53:09, updated by Pierre Rouleau>
 # Keywords: packaging, build-control
 
 # This file is part of the PEL package
@@ -216,6 +216,7 @@ EL_FILES := pel--base.el \
 		pel-setup.el \
 		pel-setup-27.el \
 		pel-shell.el \
+		pel-sh-iedit.el \
 		pel-skels.el \
 		pel-skels-generic.el \
 		pel-skels-c.el \
